Making the dropdown bars stay open

--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -150,7 +150,7 @@ Our team members were able to visit several high schools across the states of Ka
         <b>Government High School, Kopinayakkanpatti, Madurai, Tamil Nadu—</b>3rd July 2023 
       </button>
     </h2>
-    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne">
       <div class="accordion-body">
         <p>Our team conducted an educational session at Government High School, Kopinayakkanpatti, Madurai, Tamil Nadu. During this session, we engaged with a group of twenty 9th-grade students. Our primary focus was educating them about the chemicals commonly found in everyday products, emphasizing their potential impact on health and the environment. This initiative aimed to raise awareness regarding harmful chemicals in pharmaceuticals and personal care products (PPCPs).<br>
 Given that many of the students came from agricultural backgrounds, we tailored our approach to introduce the concept of synthetic biology through the lens of high-yielding variety (HYV) crops. This approach allowed us to connect with the students and highlight the relevance of synthetic biology to their rural settings.<br>
@@ -165,7 +165,7 @@ This initiative at Government High School, Kopinayakkanpatti, expanded our outre
         <b>Gundecha Education Academy, Mumbai, Maharashtra—</b>5th July 2023
       </button>
     </h2>
-    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo">
       <div class="accordion-body">
         <p>Our team had the privilege of conducting an educational session for 30 high school students in Mumbai. During this visit, two team members engaged with students from the eleventh and twelfth grades, focusing on imparting fundamental concepts and practical applications of synthetic biology and genetic engineering.<br>
 To gauge the students' prior knowledge and establish a foundation for our presentation, we initiated the session by posing a series of essential questions. These questions included inquiries about the nature of a cell, the role of proteins, the concept of genes, the genetic inheritance of physical traits from parents, the functions of proteins in living organisms, the composition of the human body, and the presence of cells in all living things.<br>
@@ -182,7 +182,7 @@ The students actively participated throughout the session, displaying remarkable
 
       </button>
     </h2>
-    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree">
       <div class="accordion-body">
         <p>Three members visited this school and had a fun, interactive session with 50 students from grades nine to twelve. Upon teaching synthetic biology and genetic engineering concepts, we explored biotechnology careers and conducted the codon chart activity. We also highlighted career prospects in biotechnology and presented our project, CarbanEl, and its real-world applications. The students actively participated, raising questions on biosafety, career opportunities, and the global impact of synthetic biology. We concluded the session with a codon chart activity, which the students enjoyed. Faculty members commended our educational efforts and posed intriguing questions about the containment of our project.</p>
       </div>
@@ -195,7 +195,7 @@ The students actively participated throughout the session, displaying remarkable
         <b>Stanes Anglo Indian Higher Secondary School, Coimbatore, Nadu—</b>5th July 2023
       </button>
     </h2>
-    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" >
       <div class="accordion-body">
         <p>We visited Stanes Anglo Indian Higher Secondary School and conducted an interactive session with 50 higher secondary and middle school students on 5th July.<br>
 The students displayed great curiosity about synthetic biology after we introduced them to the basic concepts of replication, transcription, and translation. They were particularly intrigued by peptide formation and wondered if creating mermaids or bringing back extinct animals was possible!<br>
@@ -211,7 +211,7 @@ At the end of the session, after introducing our project and its applications, m
         <b>DKS Hippocampus, Kanakapura Village (Outside Bangalore), Karnataka—</b>8th July 2023
       </button>
     </h2>
-    <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+    <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive">
       <div class="accordion-body">
         <p>This session took place at a school located on the outskirts of Bangalore, a setting that often needs more access to the abundant educational resources typically found in more urban schools.
 During our visit, two team members held a session for 60 students. Remarkably, these students, who were in their senior secondary years, demonstrated an impressive aptitude for grasping these complex concepts. Their ability to comprehend and articulate ideas typically reserved for collegiate-level students was remarkable.<br>
@@ -227,7 +227,7 @@ What was even more inspiring was the students' proactive engagement with the mat
         <b>The Samhita Academy, Bangalore—</b>12th July 2023
       </button>
     </h2>
-    <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
+    <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix">
       <div class="accordion-body">
         <p>We conducted an educational session for 50 students in grades 11 and 12, encompassing science and commerce backgrounds. During the session, we introduced them to fundamental concepts such as the central dogma of life, synthetic biology, and genetic engineering. Additionally, we provided insights into the iGEM competition and our project.
 The students showed keen interest in bioethics and biosafety, leading to engaging discussions. They enthusiastically inquired about potential career opportunities within synthetic biology and exhibited curiosity regarding the intricacies of biosafety and bioethics.</p>
@@ -243,7 +243,7 @@ The students showed keen interest in bioethics and biosafety, leading to engagin
         <b>Board High School, Udupi—</b>9th September 2023
       </button>
     </h2>
-    <div id="collapseSeven" class="accordion-collapse collapse" aria-labelledby="headingSeven" data-bs-parent="#accordionExample">
+    <div id="collapseSeven" class="accordion-collapse collapse" aria-labelledby="headingSeven">
       <div class="accordion-body">
         <p>Our team's visit to Board High School, a government school in Udupi, Karnataka, was a valuable experience. We interacted with 60 students from grades 8 and 9 despite initially planning a presentation designed for 11th and 12th graders. This presentation centered around synthetic biology and genetic engineering, had been well-received among older students in cities like Bangalore and Coimbatore.<br>
 One of the primary challenges we encountered at Board High School was the language barrier. While the school taught in both English and Kannada, the students primarily communicated in Kannada. To bridge this gap, we sought assistance from teachers and used numerous examples to make the content more accessible. We also explained amino acids using our music composition.
@@ -259,7 +259,7 @@ Despite the language challenges, our visit proved to be fruitful. Some students 
         <b>MJC school, Manipal, Karnataka—</b>14th September 2023
       </button>
     </h2>
-    <div id="collapseEight" class="accordion-collapse collapse" aria-labelledby="headingEight" data-bs-parent="#accordionExample">
+    <div id="collapseEight" class="accordion-collapse collapse" aria-labelledby="headingEight" >
       <div class="accordion-body">
         <p>Building on our experience from the visit to Board High School, we incorporated more hands-on and interactive learning activities. Our team's visit to MJC School in Manipal was an enriching experience, where we engaged with 75 students using a revamped presentation that catered to their needs and preferences.<br>
 The new presentation strategy began with an extensive explanation of the cell, providing a solid foundation for understanding subsequent topics. We then explained the concepts of DNA, RNA, and proteins before delving into the intriguing world of synthetic biology. Additionally, we elucidated our project and discussed the exciting prospects of a career in biotechnology, inspiring students to consider pursuing this field.<br>
@@ -281,12 +281,12 @@ Our documentation can aid future educational initiatives and highlight broader e
 
   <div class="accordion" id="accordionExample">
   <div class="accordion-item">
-    <h2 class="accordion-header" id="headingOne">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+    <h2 class="accordion-header" id="headingNine">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNine" aria-expanded="true" aria-controls="collapseNine">
         <b>Prakriya International School </b> (5 July, 2023)
       </button>
     </h2>
-    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+    <div id="collapseNine" class="accordion-collapse collapse show" aria-labelledby="headingNine">
       <div class="accordion-body">
         <p>During the session with the middle school students, we focused on addressing the topic of general pollutants in the environment. Additionally, we provided a concise overview of our project. The students from the middle school displayed an extraordinary level of curiosity and enthusiasm.<br>
 Their inquiries ranged from the intriguing possibility of combining genes from animals and humans to exploring the notion of sweating hydrochloric acid through the skin. These thought-provoking questions underscored their eagerness to delve into the complexities of synthetic biology and genetic engineering. The session with the middle school students was marked by their inquisitiveness and their readiness to explore the boundaries of scientific possibilities.</p>
@@ -294,12 +294,12 @@ Their inquiries ranged from the intriguing possibility of combining genes from a
     </div>
   </div>
   <div class="accordion-item">
-    <h2 class="accordion-header" id="headingTwo">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+    <h2 class="accordion-header" id="headingTen">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTen" aria-expanded="false" aria-controls="collapseTen">
         <b> Increasing our impact: India Literacy Project</b>
       </button>
     </h2>
-    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+    <div id="collapseTen" class="accordion-collapse collapse" aria-labelledby="headingTen" >
       <div class="accordion-body">
         <p>To take our education a step further, we have collaborated with India Literacy Project (ILP). This non-profit organization aims to enable children in government schools to acquire grade-appropriate skills and career opportunities. <br>
 We translated our middle school educational content on "Chemicals in Daily Use Products" into a regional language, Kannada, which will be integrated into their syllabus as additional content and be taught at almost <b>14,102 schools</b> across India. This gave us a chance to spread awareness about the presence of harmful chemicals in personal care products among the local community. </p><br>
@@ -314,37 +314,37 @@ We translated our middle school educational content on "Chemicals in Daily Use P
 
   <div class="accordion" id="accordionExample">
   <div class="accordion-item">
-    <h2 class="accordion-header" id="headingOne">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+    <h2 class="accordion-header" id="headingEleven">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEleven" aria-expanded="true" aria-controls="collapseEleven">
         <b>Sri Krishna Mandir, Hulimavu, Bangalore—</b>8th July 2023
       </button>
     </h2>
-    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+    <div id="collapseEleven" class="accordion-collapse collapse show" aria-labelledby="headingEleven">
       <div class="accordion-body">
         <p>Our team visited an underprivileged primary school to inspire students and cultivate their interest in science. Upon asking about their future aspirations, many students appeared uncertain or expressed a desire to become cricketers. We introduced the idea of pursuing careers as doctors or scientists while not discouraging their present ambitions, and then we explained our ongoing project, highlighting its fascinating aspects.</p>
       </div>
     </div>
   </div>
   <div class="accordion-item">
-    <h2 class="accordion-header" id="headingTwo">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+    <h2 class="accordion-header" id="headingTwelve">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwelve" aria-expanded="false" aria-controls="collapseTwelve">
         <b>Content created by us for primary school students</b>
       </button>
     </h2>
-    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+    <div id="collapseTwelve" class="accordion-collapse collapse" aria-labelledby="headingTwelve" >
       <div class="accordion-body">
 
       </div>
     </div>
   </div>
   <div class="accordion-item">
-    <h2 class="accordion-header" id="headingThree">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+    <h2 class="accordion-header" id="headingThirtheen">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThirteen" aria-expanded="false" aria-controls="collapseThirteen">
         <b>Tricky triclocarban comic strip:</b>
 
       </button>
     </h2>
-    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+    <div id="collapseThirteen" class="accordion-collapse collapse" aria-labelledby="headingThirteen">
       <div class="accordion-body">
         <p>Our unique and personalized comic strip titled “Tricky Triclocarban” came out in two parts, wherein the first part explained the effects of TCC on the environment. In contrast, the second part focused on how synthetic biology could solve this problem effectively. By using attractive graphical illustrations and simplifying scientific terms, we aimed to use this comic strip as a means to educate primary school students about synthetic biology in general and our project idea; this turned out to be a massive success as they stood awestruck looking at the comic and trying to get an understanding of the same while we explained it to them bit by bit!</p>
       </div>
@@ -352,12 +352,12 @@ We translated our middle school educational content on "Chemicals in Daily Use P
   </div>
 
   <div class="accordion-item">
-    <h2 class="accordion-header" id="headingFour">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+    <h2 class="accordion-header" id="headingFourteen">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFourteen" aria-expanded="false" aria-controls="collapseFourteen">
         <b>Activity booklet</b>
       </button>
     </h2>
-    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+    <div id="collapseFourteen" class="accordion-collapse collapse" aria-labelledby="headingFourteen">
       <div class="accordion-body">
         <p>GMOs are frequently faced with mistrust, so to demystify and explain the science behind it in the most approachable way possible, we set out to create an activity booklet for children.</p><br>
       </div>
