Added a bunch of stuff

--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -146,7 +146,7 @@ Our team members were able to visit several high schools across the states of Ka
 <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingOne">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
         <b>Government High School, Kopinayakkanpatti, Madurai, Tamil Nadu—</b>3rd July 2023 
       </button>
     </h2>
@@ -282,7 +282,7 @@ Our documentation can aid future educational initiatives and highlight broader e
   <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingNine">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNine" aria-expanded="true" aria-controls="collapseNine">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
         <b>Prakriya International School </b> (5 July, 2023)
       </button>
     </h2>
@@ -315,7 +315,7 @@ We translated our middle school educational content on "Chemicals in Daily Use P
   <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingEleven">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEleven" aria-expanded="true" aria-controls="collapseEleven">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEleven" aria-expanded="false" aria-controls="collapseEleven">
         <b>Sri Krishna Mandir, Hulimavu, Bangalore—</b>8th July 2023
       </button>
     </h2>
@@ -364,6 +364,147 @@ We translated our middle school educational content on "Chemicals in Daily Use P
     </div>
   </div>
   </div>
+
+  <p class='mt-5 MAIN-STUFF'> Presentation to our scientific peers</p>
+
+  <div class="accordion" id="accordionExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingFifteen">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFifteen" aria-expanded="false" aria-controls="collapseFifteen">
+        <b>Lab Safety and Security Session</b> 
+      </button>
+    </h2>
+    <div id="collapseFifteen" class="accordion-collapse collapse show" aria-labelledby="headingFifteen">
+      <div class="accordion-body">
+        <p>We organized a series of Lab Safety sessions to equip the second years of MIT Manipal pursuing a B.Tech in Biotechnology with valuable laboratory safety knowledge and hands-on experience. In order to ensure that they have some basic background knowledge before going to the lab, we conducted a theory session on general lab safety and Good Lab Practices (GLP) on the 5th of September. Following this, we conducted lab safety sessions with them. These sessions took place on the 14th, 18th and 19th of September, 2023, with two half-hour sessions each day, accommodating five students per session to ensure the lab remained spacious and manageable.<br>The primary objective of these sessions was to familiarize them with essential safety protocols and equipment, equipping them with a solid foundation for the upcoming years. The sessions were structured as follows:<br>
+
+
+      <ol>
+        <li> Introduction to Lab Safety: We delivered a comprehensive briefing on Good Laboratory Practices (GLP) and Safe Laboratory Practices (SLP) to instill a strong awareness of safety in the lab environment.</li>
+        <li>  Laboratory Tour: Subsequently, we conducted a guided tour of our lab, providing explanations for the various pieces of equipment we utilized; this included demonstrations and explanations of our centrifuges, shaker incubators, -20°C and 4°C refrigerators, fume hood, weighing balance, pH meter, gel electrophoresis and SDS-PAGE setup, and the thermocycler. </li>
+        <li> Interactive Sessions: To maintain engagement and foster hands-on learning, we demonstrated how to work within the Laminar Airflow hood, operate the pH meter, and use the UV spectrophotometer. We also showcased how to visualize gels under the UV Transilluminator. We also emphasized the importance of wearing gloves while preparing and working with gel and adding dye (SYBR et al.) as a neurotoxin.</li>
+        <li> Autoclaving and Decontamination: The final segment of the session centered on the crucial processes of autoclaving and decontamination, emphasizing their significance in maintaining lab hygiene and safety.</li>
+      </ol>
+
+      The students expressed their gratitude for the informative and engaging sessions, and they enthusiastically embraced the opportunity to familiarize themselves with laboratory safety protocols and equipment. These sessions provided them with valuable knowledge and an inspiring introduction to the exciting world of scientific research within our team.</p>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="heading">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSixteen" aria-expanded="false" aria-controls="collapseSixteen">
+        <b>Debate Workshop on Biotechnology Ethics</b>
+      </button>
+    </h2>
+    <div id="collapseSixteen" class="accordion-collapse collapse" aria-labelledby="headingSixteen" >
+      <div class="accordion-body">
+        <p>Organizing a debate workshop on "Synthetic Biology and Biotechnology Ethics" with LDQ (Literary, Debate, and Quiz Society), a student cultural club at MIT, Manipal, has allowed our iGEM team to take a proactive role in promoting science communication and education. This workshop not only provided us with a unique platform to discuss bioethics but also allowed us to facilitate meaningful conversations among participants.<br><br>
+The workshop discussed the ethical considerations surrounding vaccine development, offering a timely and relevant starting point for our deliberations. This discussion encouraged us to delve into the ethical dilemmas associated with the rapid development and distribution of vaccines, setting the stage for the broader exploration of ethical principles in science.<br><br>
+One of the central lessons from the workshop was the exploration of utilitarian principles and dual-use research concerns. Understanding utilitarianism prompted us to consider the greater societal good and the potential consequences of our scientific endeavours. We emphasized the importance of scientists' responsibility to ensure their work does not inadvertently lead to harmful applications, highlighting dual-use research concerns.<br><br>
+Our round-table discussion on gene therapy to enhance human functions further broadened our understanding of bioethical issues; this allowed us to explore the ethical boundaries of human enhancement and the nuanced considerations that come into play when we manipulate our genetic makeup.<br><br>
+Throughout the workshop, the subjectivity of ethics emerged as a critical theme. We emphasized that ethical judgments can vary among individuals and cultures, underlining the need for open dialogue and considering diverse perspectives when making ethical decisions.<br><br>
+We ended the workshop with a British Parliamentary-style debate on the motion, "This house would restart research and development in bioweapons." In summary, the workshop reinforced that scientific, ethical decisions are often complex and demand thoughtful consideration of potential consequences. It underscored the importance of engaging in open dialogue, respecting diverse viewpoints, and effectively communicating complex ideas.<br><br></p>
+
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingSeventeen">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeventeen" aria-expanded="false" aria-controls="collapseSeventeen">
+        <b>Introduction to Science Project sessions</b>
+
+      </button>
+    </h2>
+    <div id="collapseSeventeen" class="accordion-collapse collapse" aria-labelledby="headingSeventeen">
+      <div class="accordion-body">
+        <p>Our team conducted an educational program aimed at college students, providing them with a comprehensive introduction to various critical topics related to synthetic biology and biotechnology. The sessions covered a wide range of subjects, including research methodologies, hardware and software components of scientific projects, in silico modeling, the importance of research in projects, guidelines for human practices, and the significance of interconnectivity among projects worldwide. To assess the student's understanding and application of these concepts, we designed a series of tasks, some of which are listed below:<br><br>
+
+Task 0: Basics of Biotechnology<br>
+<ul>
+  <li>This task served as a refresher, briefly covering fundamental biotechnology concepts and requiring citations or resource links for answers.</li>
+</ul>
+
+Task 1: Research Paper Analysis<br>
+<ul>
+  <li>Students were tasked with selecting a research paper related to synthetic biology or biotechnology and summarizing its critical features in 800-1200 words.</li>
+</ul>
+
+Task 2: In-Depth Understanding<br>
+<ul>
+  <li>Students were required to produce a detailed 2500-word report on essential topics:</li>
+  <li>Understanding proteins and their significance in living organisms.</li>
+  <li>Profound comprehension of protein structures and alternative classification methods.</li>
+  <li>Study of RNA, its functions, different RNA types, and exploration of unfamiliar RNA variants.</li>
+  <li>Utilizing translation and back-translation tools for a specific DNA sequence.</li>
+</ul>
+
+Task 3: Innovative Human Practices Ideas<br>
+<ul>
+  <li>For each chosen field of Biology, they proposed innovative Human Practices (HP) ideas aligned with sub-categories such as Community Engagement, iHP, Education, Outreach and Science Communication, Entrepreneurship, and Inclusivity.</li>
+</ul>
+
+Overall, the tasks were designed in a way that idea creativity was encouraged, yet at the same time, basic concepts were strengthened. Therefore, our educational program engaged college students in a multifaceted synthetic biology and biotechnology exploration. The tasks we designed aimed to educate and assess their comprehension and application of the knowledge acquired. Through these tasks, we strived to foster a deeper understanding of the field and encourage creative thinking while maintaining academic rigor and ethical research practices.</p>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingNineteen">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNineteen" aria-expanded="false" aria-controls="collapseNineteen">
+        <b>Webinar on “Computational Methods in Synthetic Biology”</b>
+      </button>
+    </h2>
+    <div id="collapseNineteen" class="accordion-collapse collapse" aria-labelledby="headingNineteen">
+      <div class="accordion-body">
+        <p>30 collegiate students attended the webinar held by iGEM MIT_MAHE on 4th October 2023. We held this webinar as integrating computation with pure biological fields is relatively new. Therefore, college students may need to be made aware of the potential of this emerging interdisciplinary topic. The speaker, Olivia Gallup, is a DPhil student at the University of Oxford studying Synthetic Biology. She covered topics ranging from Biochemical reaction networks to genetic circuits. Post the webinar, there was a question session where doubts were cleared.</p>
+      </div>
+    </div>
+  </div>
+  </div>
+
+  <p class='mt-5 MAIN-STUFF'> Educating and gaining opinions from working professionals </p>
+
+
+  <div class="accordion" id="accordionExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingNine">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
+        <b>The Rotary Club of Coimbatore Metropolis, Coimbatore</b>
+      </button>
+    </h2>
+    <div id="collapseNine" class="accordion-collapse collapse show" aria-labelledby="headingNine">
+      <div class="accordion-body">
+        <p>Our Team Leader, Aditi Balasubramani, visited a meeting hosted by the Rotary Club of Coimbatore Metropolis. There, she gave a gist of the project and a basic overview of synthetic biology in a way that was easy to understand for everyone present there. There were around 20 members in the audience; they were Rotary members who were business people, mainly aged 40-60. They were very interested in the synthetic biology aspect of bioremediation. However, there were mixed opinions on the idea of genetically modified organisms and concerns about the accidental release of our modified organisms. They were satisfied with the explanation of a kill switch and biocontainment strategies. Some felt that GMOs were the future, while others were staunchly against it but were willing to listen and understand more. This visit exposed the public’s opinions towards GMOs and bioremediation.</p>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingTwenty">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwenty" aria-expanded="false" aria-controls="collapseTwenty">
+        <b>Interviewing Working Professionals all over India</b>
+      </button>
+    </h2>
+    <div id="collapseTwenty" class="accordion-collapse collapse" aria-labelledby="headingTwenty" >
+      <div class="accordion-body">
+        <p>In an attempt to gauge the understanding of working professionals about synthetic biology, GMOs, and bioremediation, a few of our team members interviewed their family members. They asked them basic questions about the same. We recorded their responses and conducted an online education session based on the topics that needed more clarity and awareness.</p>
+      </div>
+    </div>
+  </div>
+  </div>
+
+  <p class='mt-5 MAIN-STUFF'> Synthetic Biology for Everyone </p>
+
+  <p class='mt-5 sub-stuff'> On many occasions, the differently-abled are excluded from science and technology. Science is for everyone. To bring fruition to our beliefs, we visited a rehabilitation center and interacted with the members at their homes.<br><br>
+On 7 October 2023, our team visited the Asare Rehabilitation Centre—a home for the differently-abled. The senior special educator welcomed us to the institution and began by discussing how Asare houses people traditionally excluded from other homes. We then proceeded to provide crayons and coloring sheets to all the residents; they were coloring soap bottles. We used the subject of the coloring sheets as a starter for our skit, which we conducted in the local language, Kannada, and introduced our year-long project, CarbanEL. We used color changes in a beaker to signify how our project would work and, therefore, attempted to demonstrate our project more interactively. We ended the session with some songs and answered the doubts raised by the residents about our project and other scientific terms. Through this visit, we understood that there are no barriers to understanding science, and their enthusiasm toward our initiative was enlivening.</p>
+
+  <p class='mt-5 MAIN-STUFF'> Our Takeaway</p>
+  <p class='mt-5 sub-stuff'> For future teams to build upon and our biggest take away from our educational visits, this is our “Guide to Education” for various age groups. <br><br>
+This is one of the major challenges faced by our team during our education sessions. The differences in age groups, regions and languages was something that one needs to keep in mind while planning a session.<br><br> 
+From our educational visits across various states of India, we have realized a few things that need to be pondered over before an educational visit. We have attempted to compile thought-provoking and follow-up questions on how to effectively convey our ideas to the different sections of the community  and educate them about synthetic biology and more. </p>
+
+
+
 
 
 
